Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16527

some directory layout inheritance fixes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      fixes for some minor problems:

      • it may happen that the depth is not set on a dir, do not consider
        depth == 0 as a real depth while checking if the root default is
        applicable;
      • setdirstripe util implicitely sets max_inherit to 3 for non-striped
        dir when -i option is given but -c is not; at the same time 3 is the
        default for striped dirs only;
      • getdirstripe shows inherited default layouts with max_inherit==0,
        whereas it has no sense anymore; the same for an explicitely set
        default layout on a dir/root with max_inherit==0;
      • getdirstripe hides max_inherit_rr when stripe_offset != -1 as it has
        no sense and reset to 0, however it leads to user confusion;

            vitaly_fertman Vitaly Fertman
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: